--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,12 +9,15 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">31,846</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">76,097</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">orangeHRMDemo.OrangeHRMTests</td><td><a href="#m0">addEmployee</a></td><td rowspan="1">1743251374175</td><td rowspan="1">14875</td></tr><tr class="passedeven"><td><a href="#m1">loginTestWithValidCredential</a></td><td rowspan="1">1743251368013</td><td rowspan="1">6158</td></tr><tr class="passedeven"><td><a href="#m2">loginWithInvalidCredential</a></td><td rowspan="1">1743251364984</td><td rowspan="1">3019</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="6">orangeHRMDemo.OrangeHRMTests</td><td><a href="#m0">addEmployee</a></td><td rowspan="1">1743447559172</td><td rowspan="1">14706</td></tr><tr class="passedeven"><td><a href="#m1">fileUpload</a></td><td rowspan="1">1743447591247</td><td rowspan="1">16396</td></tr><tr class="passedeven"><td><a href="#m2">loginTestWithValidCredential</a></td><td rowspan="1">1743447554125</td><td rowspan="1">5041</td></tr><tr class="passedeven"><td><a href="#m3">loginWithInvalidCredential</a></td><td rowspan="1">1743447550562</td><td rowspan="1">3511</td></tr><tr class="passedeven"><td><a href="#m4">searchEmployeeById</a></td><td rowspan="1">1743447582930</td><td rowspan="1">8315</td></tr><tr class="passedeven"><td><a href="#m5">searchEmployeeNyName</a></td><td rowspan="1">1743447573880</td><td rowspan="1">9044</td></tr></tbody>
 </table>
 <h2>Default test</h2><h3 id="m0">orangeHRMDemo.OrangeHRMTests#addEmployee</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">orangeHRMDemo.OrangeHRMTests#loginTestWithValidCredential</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">orangeHRMDemo.OrangeHRMTests#loginWithInvalidCredential</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">orangeHRMDemo.OrangeHRMTests#fileUpload</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">orangeHRMDemo.OrangeHRMTests#loginTestWithValidCredential</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">orangeHRMDemo.OrangeHRMTests#loginWithInvalidCredential</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">orangeHRMDemo.OrangeHRMTests#searchEmployeeById</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">orangeHRMDemo.OrangeHRMTests#searchEmployeeNyName</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
