--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Koushik Mal\AppData\Local\Temp\testng-eclipse--126350182\testng-customsuite.xml</span>
+                    <span>C:\Users\Koushik Mal\AppData\Local\Temp\testng-eclipse--1828282466\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">6 methods,   6 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -108,12 +108,27 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="orangeHRMDemo.OrangeHRMTests" class="method navigator-link" hash-for-method="fileUpload">fileUpload</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="orangeHRMDemo.OrangeHRMTests" class="method navigator-link" hash-for-method="loginTestWithValidCredential">loginTestWithValidCredential</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="orangeHRMDemo.OrangeHRMTests" class="method navigator-link" hash-for-method="loginWithInvalidCredential">loginWithInvalidCredential</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="orangeHRMDemo.OrangeHRMTests" class="method navigator-link" hash-for-method="searchEmployeeById">searchEmployeeById</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="orangeHRMDemo.OrangeHRMTests" class="method navigator-link" hash-for-method="searchEmployeeNyName">searchEmployeeNyName</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -143,6 +158,13 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
+                  <a name="fileUpload">
+                  </a> <!-- fileUpload -->
+                  <span class="method-name">fileUpload</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="loginTestWithValidCredential">
                   </a> <!-- loginTestWithValidCredential -->
                   <span class="method-name">loginTestWithValidCredential</span>
@@ -155,12 +177,26 @@
                   <span class="method-name">loginWithInvalidCredential</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="searchEmployeeById">
+                  </a> <!-- searchEmployeeById -->
+                  <span class="method-name">searchEmployeeById</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="searchEmployeeNyName">
+                  </a> <!-- searchEmployeeNyName -->
+                  <span class="method-name">searchEmployeeNyName</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Koushik Mal\AppData\Local\Temp\testng-eclipse--126350182\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Koushik Mal\AppData\Local\Temp\testng-eclipse--1828282466\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -209,24 +245,36 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(6);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'addEmployee')
+data.setCell(0, 1, 'fileUpload')
 data.setCell(0, 2, 'orangeHRMDemo.OrangeHRMTests')
-data.setCell(0, 3, 14875);
+data.setCell(0, 3, 16396);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'loginTestWithValidCredential')
+data.setCell(1, 1, 'addEmployee')
 data.setCell(1, 2, 'orangeHRMDemo.OrangeHRMTests')
-data.setCell(1, 3, 6158);
+data.setCell(1, 3, 14706);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'loginWithInvalidCredential')
+data.setCell(2, 1, 'searchEmployeeNyName')
 data.setCell(2, 2, 'orangeHRMDemo.OrangeHRMTests')
-data.setCell(2, 3, 3019);
+data.setCell(2, 3, 9044);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'searchEmployeeById')
+data.setCell(3, 2, 'orangeHRMDemo.OrangeHRMTests')
+data.setCell(3, 3, 8315);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'loginTestWithValidCredential')
+data.setCell(4, 2, 'orangeHRMDemo.OrangeHRMTests')
+data.setCell(4, 3, 5041);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'loginWithInvalidCredential')
+data.setCell(5, 2, 'orangeHRMDemo.OrangeHRMTests')
+data.setCell(5, 3, 3511);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 24 seconds</span>
+              <span class="suite-total-time">Total running time: 57 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -259,19 +307,31 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">loginWithInvalidCredential</span>
-                <span class="method-start">7216 ms</span>
+                <span class="method-start">17860 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">loginTestWithValidCredential</span>
-                <span class="method-start">10245 ms</span>
+                <span class="method-start">21423 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">addEmployee</span>
-                <span class="method-start">16407 ms</span>
+                <span class="method-start">26470 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">searchEmployeeNyName</span>
+                <span class="method-start">41178 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">searchEmployeeById</span>
+                <span class="method-start">50228 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">fileUpload</span>
+                <span class="method-start">58545 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">31285 ms</span>
+                <span class="method-start">74950 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
