File upload, Delete employee, Print employee lists

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Koushik Mal\AppData\Local\Temp\testng-eclipse--1828282466\testng-customsuite.xml</span>
+                    <span>C:\Users\Koushik Mal\AppData\Local\Temp\testng-eclipse--1900065936\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">6 methods,   6 passed</span>
+                    <span class="method-stats">8 methods,   8 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="orangeHRMDemo.OrangeHRMTests" class="method navigator-link" hash-for-method="ListOfEmployeesPrint">ListOfEmployeesPrint</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="orangeHRMDemo.OrangeHRMTests" class="method navigator-link" hash-for-method="addEmployee">addEmployee</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="orangeHRMDemo.OrangeHRMTests" class="method navigator-link" hash-for-method="deleteEmployee">deleteEmployee</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -151,9 +161,23 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
+                  <a name="ListOfEmployeesPrint">
+                  </a> <!-- ListOfEmployeesPrint -->
+                  <span class="method-name">ListOfEmployeesPrint</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="addEmployee">
                   </a> <!-- addEmployee -->
                   <span class="method-name">addEmployee</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="deleteEmployee">
+                  </a> <!-- deleteEmployee -->
+                  <span class="method-name">deleteEmployee</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -196,7 +220,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Koushik Mal\AppData\Local\Temp\testng-eclipse--1828282466\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Koushik Mal\AppData\Local\Temp\testng-eclipse--1900065936\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -245,36 +269,44 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(6);
+data.addRows(8);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'fileUpload')
+data.setCell(0, 1, 'addEmployee')
 data.setCell(0, 2, 'orangeHRMDemo.OrangeHRMTests')
-data.setCell(0, 3, 16396);
+data.setCell(0, 3, 20987);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'addEmployee')
+data.setCell(1, 1, 'fileUpload')
 data.setCell(1, 2, 'orangeHRMDemo.OrangeHRMTests')
-data.setCell(1, 3, 14706);
+data.setCell(1, 3, 16837);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'searchEmployeeNyName')
+data.setCell(2, 1, 'ListOfEmployeesPrint')
 data.setCell(2, 2, 'orangeHRMDemo.OrangeHRMTests')
-data.setCell(2, 3, 9044);
+data.setCell(2, 3, 13242);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'searchEmployeeById')
+data.setCell(3, 1, 'deleteEmployee')
 data.setCell(3, 2, 'orangeHRMDemo.OrangeHRMTests')
-data.setCell(3, 3, 8315);
+data.setCell(3, 3, 11161);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'loginTestWithValidCredential')
+data.setCell(4, 1, 'searchEmployeeNyName')
 data.setCell(4, 2, 'orangeHRMDemo.OrangeHRMTests')
-data.setCell(4, 3, 5041);
+data.setCell(4, 3, 8941);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'loginWithInvalidCredential')
+data.setCell(5, 1, 'searchEmployeeById')
 data.setCell(5, 2, 'orangeHRMDemo.OrangeHRMTests')
-data.setCell(5, 3, 3511);
+data.setCell(5, 3, 8326);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'loginTestWithValidCredential')
+data.setCell(6, 2, 'orangeHRMDemo.OrangeHRMTests')
+data.setCell(6, 3, 5380);
+data.setCell(7, 0, 7)
+data.setCell(7, 1, 'loginWithInvalidCredential')
+data.setCell(7, 2, 'orangeHRMDemo.OrangeHRMTests')
+data.setCell(7, 3, 3081);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 57 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -289,9 +321,16 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">orangeHRMDemo.OrangeHRMTests</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">applyLeave</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -307,31 +346,39 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">loginWithInvalidCredential</span>
-                <span class="method-start">17860 ms</span>
+                <span class="method-start">7149 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">loginTestWithValidCredential</span>
-                <span class="method-start">21423 ms</span>
+                <span class="method-start">10237 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">addEmployee</span>
-                <span class="method-start">26470 ms</span>
+                <span class="method-start">15622 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">searchEmployeeNyName</span>
-                <span class="method-start">41178 ms</span>
+                <span class="method-start">36612 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">searchEmployeeById</span>
-                <span class="method-start">50228 ms</span>
+                <span class="method-start">45558 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">fileUpload</span>
-                <span class="method-start">58545 ms</span>
+                <span class="method-start">53887 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">deleteEmployee</span>
+                <span class="method-start">70726 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">ListOfEmployeesPrint</span>
+                <span class="method-start">81893 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">74950 ms</span>
+                <span class="method-start">95137 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
